--- a/page-2.html
+++ b/page-2.html
@@ -6,6 +6,7 @@
      <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
   <link rel="stylesheet" type="text/css" href="/css/page2.css">
+  <link rel="shortcut icon" href="/pictures/logo12.ico" />
 </head>
 <body>
   <div id="vertical">
@@ -52,7 +53,13 @@
   <p>Used when the events are not independent.</p>
 <h2><font color="red">Complement</font></h2>
     <p>Prob(E') = 1 - Prob(E)</p>
-<h2><font color="red">Binomial Distribution</font></h2>
+<h2><font color="red">Bernoulli Trials</font></h2>
+<p>Equation: P(x) = <sub>n</sub>C<sub>x</sub>P<sup>x</sup>q<sup>n-x</sup></p>
+<p>n = # of trials</p>
+<p>x = amount of options</p>
+<p>P = probability of success</p>
+<p>q = probability of failure</p>
+<p>A Bernoulli trial is an experiment where there are only 2 outcomes.</p>
 <h2><font color="red">Binary Search</font></h2>
 </div>
 </body>
