--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <br>
     </div>
   <h1>What is Probability?</h1>
-<p>The likelihood of an event happening.</p>
+<p>Probability is the likelihood of an event happening.</p>
 <p>Prob(E)=&nbsp;<span class="frac"><sup>|E|</sup><span>&frasl;</span><sub>|S|</sub></span></p>
      <div id="dash">
     <script src="/js/dashGenerator.js"></script>
