--- a/page3.html
+++ b/page3.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
   <link rel="stylesheet" type="text/css" href="/css/page3.css">
+  <link rel="shortcut icon" href="/pictures/logo12.ico" />
 </head>
 <body>
   <div id="vertical">
@@ -49,23 +50,24 @@
 <h1>Odds of Winning</h1>
 <h2>There are 11,238,513 Possible Combinations Of 5 White Balls</h2>
 <h2>Multiplied by 26 Red Ball combinations, there are 292,201,338 possible combinations!</h2>
-<p>Probability of getting a red Power Ball number correct: 1/26 = .0384 = 38.4%</p>
+<p>Probability of getting a red Power Ball number correct: &nbsp;<span class="frac"><sup>1</sup><span>&frasl;</span><sub>26</sub></span> = .0384 = 38.4%</p>
 <p>Probability of getting a single white ball + a red ball:</p>
-<p> # of ways of 1 white ball matching 5 white balls: &nbsp;<span class="frac"><sup>5!</sup><span>&frasl;</span><sub>1!(5-1)!</sub></span> = 5</p>
+<p> # of ways of 1 white ball matching: &nbsp;<span class="frac"><sup>5!</sup><span>&frasl;</span><sub>1!(5-1)!</sub></span> = 5</p>
 <p> # of ways of not matching the other 4 white balls: &nbsp;<span class="frac"><sup>64!</sup><span>&frasl;</span><sub>4!(64-1)!</sub></span> = 635,376</p>
-<p>635,376*5 = 3,176,880</p>
-<p>3,176,880/292,201,338 = .01087 or 1.087% chance to win $4</p>
+<p># of ways of matching a red ball: &nbsp;<span class="frac"><sup>1!</sup><span>&frasl;</span><sub>1!(1-1)!</sub></span> = 1</p>
+<p>635,376 * 5 * 1 = 3,176,880</p>
+<p>&nbsp;<span class="frac"><sup>3,176,880</sup><span>&frasl;</span><sub>292,201,338</sub></span> = .01087 or 1.087% chance to win $4</p>
 <p>Probability grows much lower with every additional correct white ball</p>
 <h1>Guaranteed Jackpot?</h1>
 <p>Using $2 tickets, $584,402,676 is required to buy each combination.</p>
 <p>Highest PowerBall Jackpot: $1.586 billion</p>
 <p>It could be profitable, but hope that the jackpot isn't divided among other players.</p>
 <h1>Is It Worth buying a ticket?</h1>
-<p>The probabilty of having 5 correct white balls and the correct powerball is 1/292,201,338 or 0.00000034222%.</p>
+<p>The probabilty of having 5 correct white balls and the correct powerball is &nbsp;<span class="frac"><sup>1</sup><span>&frasl;</span><sub>292,201,338</sub></span> or 0.00000034222%.</p>
 <p>If a line of baseballs (2.9in diameter) were lined up from Boston to Los Angeles(2,998.68 highway miles), it would take 65,515,988 baseballs.</p>
-<p>The probability of driving along this line and picking up a "winner" baseball at random is 1/65,515,988 or 0.000001526%.</p>
+<p>The probability of driving along this line and picking up a "winner" baseball at random is &nbsp;<span class="frac"><sup>1</sup><span>&frasl;</span><sub>65,515,988</sub></span> or 0.000001526%.</p>
 <h2>You are 4.46x more likely to pick the "winner" baseball along the highway than winning a powerball jackpot!</h2>
-<p>Buying a ticket for the jackpot is a scam and a half. Buying a ticket for the lower prices is a little more realistically won, but is not a good investment strategy.</p>
+<p>Buying a ticket for the jackpot is not worth the money. Buying a ticket for the lower prizes is a little more realistically won, but is still not a good investment strategy as there is a 1% chance to win $4.</p>
 </div>
 </body>
 </html>
