--- a/page3.html
+++ b/page3.html
@@ -30,7 +30,7 @@
   </div>
 </div>
 <h1>How Does Powerball Work?</h1>
-<p>A PowerBall ticket costs $2 and $3 with the Power Play option.</p>
+<p>A regular PowerBall ticket costs $2. $3 with the Power Play option.</p>
 <p>Drawings are held on Wednesdays and Saturdays</p>
 <p>The Jackpot starts at $40 Million. </p>
 <p>If the Jackpot is not awarded, it rises by at least $10 million.</p>
@@ -67,7 +67,7 @@
 <p>If a line of baseballs (2.9in diameter) were lined up from Boston to Los Angeles(2,998.68 highway miles), it would take 65,515,988 baseballs.</p>
 <p>The probability of driving along this line and picking up a "winner" baseball at random is &nbsp;<span class="frac"><sup>1</sup><span>&frasl;</span><sub>65,515,988</sub></span> or 0.000001526%.</p>
 <h2>You are 4.46x more likely to pick the "winner" baseball along the highway than winning a powerball jackpot!</h2>
-<p>Buying a ticket for the jackpot is not worth the money. Buying a ticket for the lower prizes is a little more realistically won, but is still not a good investment strategy as there is a 1% chance to win $4.</p>
+<p>Buying a ticket for the jackpot is not worth the money. Buying a ticket for the lower prizes is a little more realistic, but is still not a good investment strategy as there is a 1% chance to win $4.</p>
 </div>
 </body>
 </html>
