--- a/page-2.html
+++ b/page-2.html
@@ -54,25 +54,29 @@
 <h2><font color="red">Complement</font></h2>
     <p>Prob(E') = 1 - Prob(E)</p>
 <h2><font color="red">Bernoulli Trials</font></h2>
-<div id="dash">
-<p>Equation: Prob(k) = <sub>n</sub>C<sub>k</sub>p<sup>k</sup>q<sup>n-k</sup></p>
+<p>Prob(k) = <sub>n</sub>C<sub>k</sub> p<sup>k</sup> q<sup>n-k</sup></p>
+<div id="left">
 <p>k = Desired outcome</p>
 <p>n = # of trials</p>
 <p>p = probability of success</p>
 <p>q = probability of failure (also referred to as 1-p)</p>
 </div>
 <p>An experiment must satisfy the following to use the Bernoulli equation:</p>
+<div id="left">
 <p>1) The experiment is repeated for a fixed amount of trials with each trial independent from others.</p>
 <p>2) There are only 2 possible outcomes</p>
 <p>3) The probabilty of success is the same for each trial.</p>
 <p>4) A random variable counts the number of successful trials.</p>
+</div>
 <h2><font color="red">Binary Search</font></h2>
+<div id="left">
 <p>Only works if the numbers are in order.</p>
 <p>Can be more effective than a standard linear search.</p>
 <p>Less effective if the number searched is in the beginning of the list; sequential search is more effective then.</p>
 <p>Binary search works by going to a middle number in a list.</p>
 <p>Based on if the number being searched is higher or lower than the middle number in the list, it continues searching either the lower or higher half of the numbered list.</p>
 <img src="/pictures/binary-search.gif" alt="Animation" class="center">
+</div>
 </div>
 </body>
 </html>
