--- a/page-2.html
+++ b/page-2.html
@@ -31,7 +31,7 @@
     </div>
 <h1>Rules</h1>
 <h2><font color="red">Probabilty Formula</font></h2>
-<div id="center">
+<div id="mid">
 <p>Prob(E)&nbsp;<span class="frac"><sup>|E|</sup><span>&frasl;</span><sub>|S|</sub></span></p>
 <p>|E| = Total number of favorable outcomes</p>
 <p>|S| = Total number of Outcomes or Sample space</p>
