--- a/page3.html
+++ b/page3.html
@@ -61,7 +61,7 @@
 <h1>Guaranteed Jackpot?</h1>
 <p>Using $2 tickets, $584,402,676 is required to buy each combination.</p>
 <p>Highest PowerBall Jackpot: $1.586 billion</p>
-<p>It could be profitable, but hope that the jackpot isn't divided among other players.</p>
+<p>It could be profitable, but hope that the jackpot isn't divided among other players and the tax isn't too large.</p>
 <h1>Is It Worth buying a ticket?</h1>
 <p>The probabilty of having 5 correct white balls and the correct powerball is &nbsp;<span class="frac"><sup>1</sup><span>&frasl;</span><sub>292,201,338</sub></span> or 0.00000034222%.</p>
 <p>If a line of baseballs (2.9in diameter) were lined up from Boston to Los Angeles(2,998.68 highway miles), it would take 65,515,988 baseballs.</p>
