--- a/page-2.html
+++ b/page-2.html
@@ -52,6 +52,7 @@
   <p>Used when the events are not independent.</p>
 <h2><font color="red">Complement</font></h2>
     <p>Prob(E') = 1 - Prob(E)</p>
+    <p>The complement E' of E is the event consisting of all the outcomes that do not occur in E.</p>
 <h2><font color="red">Bernoulli Trials</font></h2>
 <p>Prob(k) = <sub>n</sub>C<sub>k</sub> p<sup>k</sup> q<sup>n-k</sup></p>
 <p>k = Desired outcome</p>
