--- a/examples.html
+++ b/examples.html
@@ -33,6 +33,9 @@
 <br>
 <img src="\pictures\Image 12-4-19 at 3.06 PM.jpg" alt="Example1" class="examples">
 <br>
+<h2><font color="red">For more help:</font></h2>
+    <p>https://www.mathgoodies.com/lessons/vol6/addition_rules</p>
+    <p>https://courses.lumenlearning.com/introstats1/chapter/two-basic-rules-of-probability/</p>
 </div>
 </body>
 </html>
